// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`easeInOut should return easeInOutBack cubic-bezier 1`] = `
Object {
  "transition-timing-function": "cubic-bezier(0.680, -0.550, 0.265, 1.550)",
}
`;

exports[`easeInOut should return easeInOutCirc cubic-bezier 1`] = `
Object {
  "transition-timing-function": "cubic-bezier(0.785,  0.135, 0.150, 0.860)",
}
`;

exports[`easeInOut should return easeInOutCubic cubic-bezier 1`] = `
Object {
  "transition-timing-function": "cubic-bezier(0.645,  0.045, 0.355, 1.000)",
}
`;

exports[`easeInOut should return easeInOutExpo cubic-bezier 1`] = `
Object {
  "transition-timing-function": "cubic-bezier(1.000,  0.000, 0.000, 1.000)",
}
`;

exports[`easeInOut should return easeInOutQuad cubic-bezier 1`] = `
Object {
  "transition-timing-function": "cubic-bezier(0.455,  0.030, 0.515, 0.955)",
}
`;

exports[`easeInOut should return easeInOutQuart cubic-bezier 1`] = `
Object {
  "transition-timing-function": "cubic-bezier(0.770,  0.000, 0.175, 1.000)",
}
`;

exports[`easeInOut should return easeInOutQuint cubic-bezier 1`] = `
Object {
  "transition-timing-function": "cubic-bezier(0.860,  0.000, 0.070, 1.000)",
}
`;
